syntax = "proto2";

message Payload {
  required uint64 at = 1;
  required string event = 2;
  required uint32 nr = 3;
  optional uint32 user_id = 4;
  optional string ip = 5;
  optional string parameters = 6;
  optional bool is_testing = 7;
}

message Collection {
  required string device_id = 1;
  required string client_id = 2;
  required string session = 3;
  required string system_version = 4;
  required string product_version = 5;
  optional string system = 6;
  optional string product_git_hash = 7;
  repeated Payload payloads = 8;
}
